[package]
name = "kn0sys-lmdb-rs"
edition = "2021"
version = "0.1.3"
authors = ["Nigel Christian <nigel.christian@hiahatf.org>"]
license = "MIT"
description = "LMDB bindings"
repository = "https://github.com/kn0sys/lmdb-rs"
documentation = "https://docs.rs/kn0sys-lmdb-rs"
readme = "README.md"
keywords = ["lmdb", "db", "key-value", "kvs", "kv"]
exclude = [
        ".gitignore",
        ".travis.yml",
        "up_doc.sh",
]

[dependencies.liblmdb-sys]
path = "liblmdb-sys"
version = "0.2.2"

[dependencies]
log = "0.4.22"
libc = "0.2"
bitflags = "2.6.0"
