[package]
name = "liblmdb-sys"
version = "0.2.2"
authors = ["Nigel Christian <nigel.christian@hiahatf.org>"]
links = "lmdb"
license = "MIT"
description = "LMDB native lib"
repository = "https://github.com/kn0sys/lmdb-rs"
build = "build.rs"

[dependencies]
libc = "0.2"
[build-dependencies]
cc = "1.1.7"
